[gd_scene load_steps=12 format=2]

[ext_resource path="res://ADDA assets/HitBarEmpty.png" type="Texture" id=1]
[ext_resource path="res://ADDA assets/HitBar.png" type="Texture" id=2]
[ext_resource path="res://ADDA assets/CrossbowIcon.png" type="Texture" id=3]
[ext_resource path="res://ADDA assets/Heart.png" type="Texture" id=4]
[ext_resource path="res://UI.gd" type="Script" id=5]
[ext_resource path="res://ADDA assets/EmptyConsumable.png" type="Texture" id=6]
[ext_resource path="res://ADDA assets/Hal-Heart.png" type="Texture" id=7]
[ext_resource path="res://ADDA assets/DeadHeart.png" type="Texture" id=8]
[ext_resource path="res://ADDA assets/PotionIcon.png" type="Texture" id=9]
[ext_resource path="res://Font_12.tres" type="DynamicFont" id=10]
[ext_resource path="res://Font_40.tres" type="DynamicFont" id=11]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
default_weapon_texture = ExtResource( 1 )
default_consumable_texture = ExtResource( 6 )
heart_texture = ExtResource( 4 )
half_heart_texture = ExtResource( 7 )
dead_heart_texture = ExtResource( 8 )

[node name="Hud" type="Node2D" parent="."]
scale = Vector2( 2, 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Hud"]
margin_left = 10.0
margin_top = 10.0
margin_right = 74.0
margin_bottom = 178.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Hud/VBoxContainer"]
margin_right = 64.0
margin_bottom = 32.0

[node name="HeartBox" type="TextureRect" parent="Hud/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="CurenWeapon" type="TextureProgress" parent="Hud/VBoxContainer"]
margin_top = 36.0
margin_right = 64.0
margin_bottom = 100.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurenConsumable" type="TextureRect" parent="Hud/VBoxContainer"]
margin_top = 104.0
margin_right = 64.0
margin_bottom = 168.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 9 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Victory" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Victory"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Victory/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Victory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Victory/VBoxContainer"]
margin_top = 52.0
margin_right = 1240.0
margin_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "You have succesfuly retrieved he Amulet of Yondur"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Victory/VBoxContainer"]
margin_top = 76.0
margin_right = 1240.0
margin_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Press F1 to restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defeat" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Defeat"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Defeat/VBoxContainer"]
margin_right = 564.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Defeat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Defeat/VBoxContainer"]
margin_top = 52.0
margin_right = 564.0
margin_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "You were slain by the cultists. Now the wolrd is doomed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Defeat/VBoxContainer"]
margin_top = 76.0
margin_right = 564.0
margin_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Press F1 to restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
